# $Id$

2006-04-29	Ivan Y. Khvostishkov

	* core/Form/Primitive.class.php: added support for enumeration
	primitive.
	* core/Form/PrimitiveEnumeration.class.php: added.

2006-04-26	Konstantin V. Arkhipov

	* meta/classes/MetaClassProperty.class.php: hacky support for
	unsupported boolean type at MySQL.

	* core/OSQL/InsertOrUpdateQuery.class.php,
	core/OSQL/UpdateQuery.class.php: do not quote boolean values.

2006-04-25	Anton E. Lebedevich

	* main/Utils/TextUtils.class.php: added friendlyFileSize() method.

2006-04-21	Anton E. Lebedevich

	* main/Utils/DebugUtils.class.php: fixed html output, functions ec
	and microtime added.

	* main/Utils/XmlRpcClient.class.php: simple wrapper for XML-RPC.

2006-04-20	Konstantin V. Arkhipov

	* main/Flow/EditorController.class.php: do not override child's
	command map, if any.

	* main/Flow/RedirectView.class.php: query string generation fixed.

2006-04-16	Konstantin V. Arkhipov

	* 0.4.2 released.

	* core/Form/UrlEncodeFilter.class.php,
	core/Form/UrlDecodeFilter.class.php,
	core/Form/StringReplaceFilter.class.php: more wrappers.

2006-04-14	Konstantin V. Arkhipov

	* meta/builders/ProtoClassBuilder.class.php: tricky relations handling
	implemented in proto classes, fixme closed.

2006-04-12	Konstantin V. Arkhipov

	* meta/builders/ContainerClassBuilder.class.php: removed unneeded
	method for OneToMany-based containers.

	* core/Form/PrimitiveDate.class.php: complexity detection fixed.

	* core/Form/FormUtils.class.php: forced usage of single import for
	complex primitives.

2006-04-11	Anton E. Lebedevich

	* main/Containers/UnifiedContainer.class.php: one more evil typo
	fixed, propagated from 0.2.

2006-04-11	Konstantin V. Arkhipov

	* core/DB/DBFactory.class.php: introduced ability to specify
	conntector's type for custom connections.
	
	* core/Base/Creatable.class.php: deprecated.
	
	* meta/: removed support for Creatable interface.

2006-04-09	Konstantin V. Arkhipov

	* 0.4.1 released.

2006-04-06	Konstantin V. Arkhipov
